<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="mx.iteso.escalaapp.activities.ActivityEditProfile">

    <TextView
        android:id="@+id/activity_login_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/thirty_five_sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/signin_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifeteen"
            android:scaleType="centerCrop"
            fresco:placeholderImage="@drawable/climber"
            fresco:roundAsCircle="true" />

        <Button
            android:id="@+id/signin_image_button"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@drawable/button_2"
            android:text="@string/change_image"
            android:textSize="@dimen/ten_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_five"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">




                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sigin_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/climber_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/sigin_state_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/state"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/sigin_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/lastname"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/sigin_city_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/city"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/ten"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/gym"
                android:maxLines="1"
                android:text="@string/category"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/signin_category_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:entries="@array/categorias_ejemplo"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/ten"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gym"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fifeteen" />

            <Spinner
                android:id="@+id/signin_gym_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fresco:counterEnabled="true"
            fresco:counterMaxLength="100">

            <EditText
                android:id="@+id/signin_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/description"
                android:imeOptions="actionGo"
                android:inputType="textImeMultiLine"
                android:maxLength="100"
                android:maxLines="4"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/signin_done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/ten"
            android:layout_weight="1"
            android:background="@drawable/button_1"
            android:text="@string/new_comp_done"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_five" />

    </LinearLayout>


</LinearLayout>
