<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.ActivitySignGym">

    <TextView
        android:id="@+id/activity_sign_gym"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/adding_a_gym"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/thirty_five_sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sign_gym_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifeteen"
            android:scaleType="centerCrop"
            fresco:placeholderImage="@drawable/climber"
            fresco:roundAsCircle="true" />

        <Button
            android:id="@+id/sign_gym_image_button"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fifeteen"
            android:background="@drawable/button_2"
            android:text="@string/change_image"
            android:textSize="@dimen/ten_sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_gym_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/gym_name"
                android:inputType="textPersonName"
                android:maxLines="2"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_gym_eslogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/sign_gym_eslogan"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/sign_gym_city_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/city"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/sign_gym_state_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/state"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_gym_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/sign_gym_address"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_gym_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/sign_gym_done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/ten"
            android:layout_weight="1"
            android:background="@drawable/button_1"
            android:text="@string/new_comp_done"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_five_sp" />

    </LinearLayout>


</LinearLayout>
